# Industrial_Project-

./: README.md  docker-compose.yml  ros2.Dockerfile
FleetManager/: FleetManager.csproj  Program.cs
amr_controller/: CMakeLists.txt  package.xml
log/: latest_build
ros2_ws/: .gitignore  README.md  start_factory.sh
ros2_ws/src/amr_controller/: CMakeLists.txt  package.xml
ros2_ws/src/amr_controller/src/: mqtt_bridge.cpp  robot_node.cpp  robot_node_2.cpp
ros2_ws/src/conveyor_system/: CMakeLists.txt  package.xml
ros2_ws/src/conveyor_system/src/: conveyor_node.cpp
ros2_ws/src/factory_bringup/launch/: factory_start.launch.py
ros2_ws/src/factory_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/factory_interfaces/msg/: RobotState.msg
